[package]
name = "streaming_quotes"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.10.1", features = ["default"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
rstest = "0.26.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"